--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         <h2 class="img-filters__title visually-hidden">Фильтр фотографий</h2>
         <form
           class="img-filters__form"
-          action="index.html"
-          method="get"
+          action="https://28.javascript.pages.academy/kekstagram"
+          method="post"
           autocomplete="off"
+          enctype="multipart/form-data"
         >
           <button
             type="button"
@@ -249,7 +250,10 @@
                         class="text__description"
                         name="description"
                         placeholder="Ваш комментарий..."
-                      ></textarea>
+                        data-pristine-maxlength="140"
+                        data-pristine-maxlength-message="Длина комментария превышает 140 символов"
+                      >
+                      </textarea>
                     </div>
                   </fieldset>
 
@@ -454,5 +458,8 @@
         Загружаем...
       </div>
     </template>
+    <!-- Подключаем библиотеки -->
+    <script src="vendor/pristine/pristine.min.js"></script>
+    <script src="vendor/nouislider/nouislider.js"></script>
   </body>
 </html>
