Исправляет прошлую домашнюю работу

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                         class="text__hashtags"
                         name="hashtags"
                         placeholder="#ХэшТег"
+                        data-pristine-maxlength="20"
                       />
                     </div>
                     <div class="img-upload__field-wrapper">
